--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -45,10 +45,10 @@
                 android:layout_height="0dp"
                 android:clipChildren="false"
                 android:clipToPadding="false"
-                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                 android:layoutAnimation="@anim/layout_animation_fall_down"
                 android:orientation="vertical"
                 android:paddingVertical="@dimen/dimen_20"
+                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -70,6 +70,17 @@
             app:lottie_loop="false"
             app:lottie_rawRes="@raw/lottie_start_game"
             tools:visibility="visible" />
+
+        <TextView
+            style="@style/gameBodyStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/game_mode_repeat"
+            app:isVisible="@{viewModel.navType == GameNavType.REPEAT_INCORRECT_ANSWERS}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ready_to_start_game" />
 
         <LinearLayout
             android:layout_width="match_parent"
